Updates topic tag for consistency

--- a/content/BL-1009.md
+++ b/content/BL-1009.md
@@ -3,7 +3,7 @@ id: 1009
 title: Getting Started with Nuxt.js A Beginner’s Guide
 author: Muneer Ahmed
 tags: Nuxt.js Vue.js Beginner-Guide
-topic: Nuxt.js
+topic: Nuxt
 abstract: Learn the basics of Nuxt.js, including project setup, routing, layouts, and data fetching, to kickstart your journey with this powerful Vue.js framework.
 headerImage: /BL-1009/header.jpg
 isPublished: true
